# trunic-ocr

./: .firebaserc  README.angular.md  README.md  angular.json  firebase.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
public/example-images/small/: game-1.avif  game-1.jxl  game-2.avif  game-2.jxl  game-3.avif  game-3.jxl  manual-1.avif  manual-1.jxl  manual-2.avif  manual-2.jxl
src/: index.html  styles.scss
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  example-inputs.json  image-ext-to-mime-type.pipe.ts  pywork.service.ts  pywork.worker.ts  snackbar-error-handler.service.spec.ts  snackbar-error-handler.service.ts  trunic-data.ts  worker-api.ts
src/app/cropped-image-renderer-canvas/: cropped-image-renderer-canvas.component.spec.ts  cropped-image-renderer-canvas.component.ts
src/app/image-renderer-canvas/: image-renderer-canvas.component.spec.ts  image-renderer-canvas.component.ts
src/app/info-dialog/: info-dialog-open-button.directive.spec.ts  info-dialog-open-button.directive.ts  info-dialog.component.html  info-dialog.component.scss  info-dialog.component.ts
trunic-ocr-core/: pyproject.toml
trunic-ocr-core/tests/: test_e2e.py
trunic-ocr-core/tests/goldens/: 10-1.yml  13-1.yml  13-2.yml  13-3.yml  14-1.yml  15-1.yml  15-2.yml  18-1.yml  3-1.yml  3-2.yml  4-1.yml  4-2.yml  5-1.yml  5-2.yml  7-1.yml  7-2.yml  7-3.yml  7-4.yml  consonant-table.yml  vowel-table.yml
trunic-ocr-core/trunic_ocr_core/: __init__.py
(+45 files in other folders)
